# pacman-rldp

./: .gitignore  BITMASK_VALUE_ITERATION.md  CONTRIBUTING.md  README.md  pyproject.toml  q_obs_weights_copy.pkl  q_weights.pkl  sarsa_weights.pkl
configs/: default.yaml  policy_iteration_obs.yaml  sarsa.yaml
results/important/: eval_bitmask_vi_metrics.json  train_bitmask_vi_metrics.json
scripts/: eval.py  eval_bitmask_vi.py  eval_policy_iteration_obs.py  play.py  play_policy_iteration_obs.py  q_eval.py  q_learning_agent.py  q_obs_learning_agent_copy.py  q_table_learning_agent.py  sarsa.py  sarsa_training.py  train.py  train_bitmask_vi.py  train_policy_iteration_obs.py
src/pacman_rldp/: pipelines_food_bitmask_vi.py  pipelines_tabular_q.py
src/pacman_rldp/agents/: __init__.py  baseline.py  obs_policy.py  sarsa.py
src/pacman_rldp/algorithms/policy_iteration/: pi_runner.py  policy_iteration_obs.py
src/pacman_rldp/env/: __init__.py  observations.py  pacman_env.py
src/pacman_rldp/visuals/: manual.py
tests/: test_cli_smoke.py  test_ghost_loop_policy.py  test_manual_policy_wiring.py
